src/test/deca/context/valid/homemade/test/test02_affectation_type.deca
// test valide de la règle 0.2


{
    int a = 7;
    int aa;
    float b = 0.5;
    float bb;
    boolean c = true;
    boolean cc;
}